# native-whisperx

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  package-dry-run.yml  pages.yml  parity-fixtures.yml  supply-chain.yml
crates/native-whisperx/: Cargo.toml  README.md
crates/native-whisperx-cli/: Cargo.toml
crates/native-whisperx-cli/speaker-directory-ui/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
crates/native-whisperx-cli/speaker-directory-ui/src/: App.test.tsx  App.tsx  api.ts  mockSpeakerDirectoryApi.ts  styles.css
crates/native-whisperx-cli/src/: args.rs  main.rs  preflight.rs
crates/native-whisperx-cli/src/cmd/: import.rs  inspect.rs  live.rs  mod.rs  parity.rs  parity_tests.rs  speaker.rs  support.rs  transcribe.rs
crates/native-whisperx-cli/src/ui/: handlers.rs  mod.rs  server.rs
crates/native-whisperx-cli/tests/: cli_smoke.rs  native_asr_cache_smoke.rs  real_ffmpeg_media_decode_smoke.rs  release_install_smoke.rs
crates/native-whisperx/src/: config.rs  config_mapping.rs  lib.rs  live.rs  output.rs  parity.rs  report.rs  silero_vad.rs  speaker_directory.rs  workflow.rs
crates/native-whisperx/src/config/: alignment.rs  asr.rs  defaults.rs  diarization.rs  error.rs  mod.rs  output.rs  parity.rs  report.rs  request.rs  selection.rs  speaker.rs  translation.rs  vad.rs  workflow_selection.rs
crates/native-whisperx/src/diarization/: mod.rs
crates/native-whisperx/src/speaker/: mod.rs
crates/native-whisperx/src/translation/: legacy_pickle.rs  mod.rs  planning.rs  result.rs
crates/native-whisperx/src/workflow/: execution.rs  mod.rs  multi_input.rs  progress.rs
crates/native-whisperx/tests/: finite_progress.rs  live_progress.rs  native_opus_mt_provider.rs  translated_results.rs  translation_registry.rs  whisperx_compat_boundary.rs
docs/: benchmark-evidence.md  model-bundles.md  native-performance-findings.md  parity-matrix.md  parity-worklist.md  parity.md  publish-plan.md  speaker-directory-ui.md
docs/adr/: 0001-whisperx-cli-parity-contract.md  0002-hugging-face-cache-for-model-resolution.md  0003-python-bridge-with-rust-replacement-track.md  0004-dual-json-contracts.md  0005-native-pyannote-vad-remains-delegated.md  0006-rust-native-parity-proving-ground.md  0007-full-workflow-throughput-gate.md  0008-speaker-identity-and-trace-separation.md  0009-persist-native-speaker-profiles.md  0010-app-level-input-pattern-expansion.md  0011-near-live-windows-before-true-streaming.md  0012-check-in-speaker-directory-react-assets.md  0013-native-transcribe-progress-stdout-report-file.md  0014-automatic-native-diarization-selects-pyannote.md
docs/agents/: domain.md  issue-tracker.md  planning-workflow.md  tdd-workflow.md  triage-labels.md
scripts/: agent_loop_context.py  agent_loop_diagnostics.py  agent_loop_model_policy.py  agent_loop_queue.py  check-release-metadata.py  sync_agent_loop_labels.py
site/: README.md  index.html
site/assets/: site.css
tests/fixtures/: README.md  real-opus-mt-translation.json  whisperx-parity-sample.json
tests/parity/: asr-fixtures.json  full-resource-fixtures.json  rust-native-bench-fixtures.json  rust-native-multi-input-bench-fixtures.json
