[workspace]
members = [
    "crates/native-whisperx",
    "crates/native-whisperx-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.95"
repository = "https://github.com/moritzbrantner/native-whisperx"
homepage = "https://github.com/moritzbrantner/native-whisperx"
documentation = "https://docs.rs/native-whisperx"
keywords = ["whisperx", "audio", "transcription", "alignment", "diarization"]
categories = ["multimedia::audio", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1.0.100"
assert_cmd = "2.0.17"
clap = { version = "4.5.51", features = ["derive"] }
predicates = "3.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.23.0"
thiserror = "2.0.17"

audio-analysis-transcription = { package = "moritzbrantner-audio-analysis-transcription", version = "0.1.3", default-features = false }
text-transcripts = { package = "moritzbrantner-text-transcripts", version = "0.1.1", default-features = false }
video-analysis-core = { package = "moritzbrantner-video-analysis-core", version = "0.1.3" }
