[workspace]
members = [
    "crates/native-whisperx",
    "crates/native-whisperx-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.95"
repository = "https://github.com/moritzbrantner/native-whisperx"
homepage = "https://github.com/moritzbrantner/native-whisperx"
documentation = "https://docs.rs/native-whisperx"
keywords = ["whisperx", "audio", "transcription", "alignment", "diarization"]
categories = ["multimedia::audio", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1.0.100"
assert_cmd = "2.0.17"
clap = { version = "4.5.51", features = ["derive"] }
dirs = "6.0.0"
predicates = "3.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.23.0"
thiserror = "2.0.17"

audio-analysis-speakers = { package = "moritzbrantner-audio-analysis-speakers", version = "0.1.2", path = "../rust-packages/crates/audio/audio-analysis-speakers", default-features = false }
audio-analysis-transcription = { package = "moritzbrantner-audio-analysis-transcription", version = "0.1.6", path = "../rust-packages/crates/audio/audio-analysis-transcription", default-features = false }
model-runtime = { package = "moritzbrantner-model-runtime", version = "0.1.0", path = "../rust-packages/crates/runtime/model-runtime", default-features = false }
text-model-runtime = { package = "moritzbrantner-text-model-runtime", version = "0.1.0", path = "../rust-packages/crates/text/text-model-runtime", default-features = false }
text-transcripts = { package = "moritzbrantner-text-transcripts", version = "0.1.1", path = "../rust-packages/crates/text/text-transcripts", default-features = false }
video-analysis-core = { package = "moritzbrantner-video-analysis-core", version = "0.1.3", path = "../rust-packages/crates/video/video-analysis-core" }
