[package]
name = "native-whisperx-cli"
description = "Cargo-installable CLI for native-whisperx WhisperX parity workflows."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/native-whisperx-cli"
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
include = [
    "Cargo.toml",
    "../../README.md",
    "speaker-directory-ui/dist/**",
    "src/**",
]

[[bin]]
name = "native-whisperx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
glob.workspace = true
indicatif = "0.18.3"
native-whisperx = { path = "../native-whisperx", version = "0.1.1", default-features = false }
serde_json.workspace = true

[features]
default = ["native", "media-decode"]
native = ["native-whisperx/native"]
cuda = ["native-whisperx/cuda"]
media-decode = ["native-whisperx/media-decode"]
diarization = ["native-whisperx/diarization"]
onnx-diarization = ["native-whisperx/onnx-diarization"]
pyannote-diarization = ["native-whisperx/pyannote-diarization"]
silero-vad = ["native-whisperx/silero-vad"]
pyannote-vad = ["native-whisperx/pyannote-vad"]
whisperx-compat = ["native-whisperx/whisperx-compat"]

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
