[package]
name = "native-whisperx"
description = "WhisperX-style transcription workflows composed from moritzbrantner Rust building-block crates."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "native_whisperx"

[dependencies]
audio-analysis-transcription.workspace = true
runtime-onnx = { package = "moritzbrantner-runtime-onnx", version = "0.1.0", features = ["onnxruntime"], optional = true }
serde.workspace = true
serde_json.workspace = true
text-model-runtime = { workspace = true, optional = true }
text-transcripts.workspace = true
thiserror.workspace = true
video-analysis-core.workspace = true

[features]
default = ["native"]
native = [
    "audio-analysis-transcription/candle",
    "audio-analysis-transcription/alignment",
    "audio-analysis-transcription/model-bundles",
    "translation",
]
translation = [
    "dep:text-model-runtime",
    "text-model-runtime/marian-translation",
]
cuda = ["native", "audio-analysis-transcription/cuda"]
media-decode = ["audio-analysis-transcription/audio-io"]
diarization = ["audio-analysis-transcription/diarization"]
onnx-diarization = [
    "diarization",
    "audio-analysis-transcription/onnx",
    "audio-analysis-transcription/model-bundles",
]
silero-vad = ["dep:runtime-onnx"]
whisperx-compat = ["audio-analysis-transcription/external-whisperx"]

[dev-dependencies]
tempfile.workspace = true
