[package]
name = "native-whisperx"
description = "WhisperX-style transcription workflows composed from moritzbrantner Rust building-block crates."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories = ["multimedia::audio"]
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[package.metadata.docs.rs]
all-features = false
features = [
    "native",
    "media-decode",
    "pyannote-vad",
    "pyannote-diarization",
    "whisperx-compat",
]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "native_whisperx"

[dependencies]
audio-analysis-speakers.workspace = true
audio-analysis-transcription.workspace = true
candle-core = { version = "0.10.2", optional = true }
candle-nn = { version = "0.10.2", optional = true }
candle-transformers = { version = "0.10.2", optional = true }
dirs.workspace = true
model-runtime = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sentencepiece-rs = { version = "0.2.2", optional = true }
text-model-runtime = { workspace = true, optional = true }
text-transcripts.workspace = true
thiserror.workspace = true
video-analysis-core.workspace = true

[features]
default = ["native", "media-decode", "pyannote-vad", "pyannote-diarization"]
native = [
    "audio-analysis-transcription/candle",
    "audio-analysis-transcription/alignment",
    "audio-analysis-transcription/model-bundles",
]
translation = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:model-runtime",
    "dep:sentencepiece-rs",
    "dep:text-model-runtime",
]
cuda = ["native", "audio-analysis-transcription/cuda", "candle-core/cuda"]
media-decode = ["audio-analysis-transcription/audio-io"]
diarization = ["audio-analysis-transcription/diarization"]
onnx-diarization = [
    "diarization",
    "audio-analysis-transcription/onnx",
    "audio-analysis-transcription/model-bundles",
]
pyannote-diarization = [
    "diarization",
    "audio-analysis-transcription/pyannote-diarization",
]
silero-vad = ["audio-analysis-transcription/silero-vad"]
pyannote-vad = ["audio-analysis-transcription/pyannote-vad"]
whisperx-compat = ["audio-analysis-transcription/external-whisperx"]

[dev-dependencies]
tempfile.workspace = true
